--- a/FocusMap WatchKit App/Base.lproj/Interface.storyboard
+++ b/FocusMap WatchKit App/Base.lproj/Interface.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7528.3" systemVersion="14D131" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7518.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
@@ -57,7 +57,7 @@
                         <map alignment="center" verticalAlignment="center" id="iXz-GP-L3p"/>
                     </items>
                     <connections>
-                        <outlet property="mapView" destination="iXz-GP-L3p" id="H9P-Ku-uG9"/>
+                        <outlet property="map" destination="iXz-GP-L3p" id="iJe-Ed-h7t"/>
                     </connections>
                 </controller>
             </objects>
