--- a/FocusMap WatchKit App/Base.lproj/Interface.storyboard
+++ b/FocusMap WatchKit App/Base.lproj/Interface.storyboard
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7703" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U1T-Gt-VFx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
-        <scene sceneID="aou-V4-d1y">
-            <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController"/>
-            </objects>
-            <point key="canvasLocation" x="235" y="347"/>
-        </scene>
         <!--table-->
         <scene sceneID="zgd-qe-546">
             <objects>
@@ -20,11 +13,17 @@
                         <table alignment="left" id="x0e-G9-Yz7">
                             <items>
                                 <tableRow identifier="row" selectable="NO" id="SPq-AL-AZx" customClass="TableRowInterfaceController">
-                                    <group key="rootItem" width="1" alignment="left" id="kJ7-2o-9fz">
+                                    <group key="rootItem" width="1" height="0.0" alignment="left" layout="vertical" id="kJ7-2o-9fz">
                                         <items>
-                                            <label alignment="left" verticalAlignment="center" text="Label" id="QQ3-kn-VD7"/>
-                                            <imageView width="20" height="20" alignment="right" verticalAlignment="center" image="heart" id="KrD-qK-iFy"/>
-                                            <label alignment="right" verticalAlignment="center" text="Label" id="bTp-GN-S5i"/>
+                                            <label width="1" alignment="left" text="Label" id="QQ3-kn-VD7">
+                                                <fontDescription key="font" style="UICTFontTextStyleHeadline"/>
+                                            </label>
+                                            <group width="1" alignment="left" id="Vhg-ff-1kG">
+                                                <items>
+                                                    <imageView width="20" height="20" alignment="left" image="heart" id="KrD-qK-iFy"/>
+                                                    <label alignment="left" text="Label" id="bTp-GN-S5i"/>
+                                                </items>
+                                            </group>
                                         </items>
                                     </group>
                                     <connections>
@@ -44,10 +43,11 @@
                     </items>
                     <connections>
                         <outlet property="table" destination="x0e-G9-Yz7" id="BVk-jx-1Yn"/>
+                        <segue destination="Jch-og-4t3" kind="relationship" relationship="nextPage" id="Vmf-cb-CdW"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="436" y="347"/>
+            <point key="canvasLocation" x="235" y="354"/>
         </scene>
         <!--map-->
         <scene sceneID="ZxG-Bt-PmK">
@@ -61,7 +61,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="630" y="347"/>
+            <point key="canvasLocation" x="553" y="354"/>
         </scene>
         <!--Glance Interface Controller-->
         <scene sceneID="BOz-TT-tkC">
