--- a/FocusMap WatchKit App/Base.lproj/Interface.storyboard
+++ b/FocusMap WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7703" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U1T-Gt-VFx">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U1T-Gt-VFx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--table-->
@@ -60,10 +60,10 @@
             <objects>
                 <controller identifier="map" id="Jch-og-4t3" customClass="MapInterfaceController">
                     <items>
-                        <map alignment="center" verticalAlignment="center" id="iXz-GP-L3p"/>
+                        <map alignment="left" id="cyj-4C-tSz"/>
                     </items>
                     <connections>
-                        <outlet property="map" destination="iXz-GP-L3p" id="iJe-Ed-h7t"/>
+                        <outlet property="map" destination="cyj-4C-tSz" id="ArU-Ju-cFg"/>
                     </connections>
                 </controller>
             </objects>
